--- a/index.html
+++ b/index.html
@@ -3,122 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title> CS2 CRAFTS </title>
-    <h1 style="text-align:center; background-color:#E39799">CS2 GUN CRAFTING</h1>
+    <title> HOME | CS2 CRAFTS </title>
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme&display=swap" rel="stylesheet">
-    <style>
-    body {
-      font-family: 'Pathway Extreme', sans-serif;
-    }
-    </style>
     <link rel="stylesheet" href="styles.css">
+    <style>
+      body {
+        font-family: 'Pathway Extreme', sans-serif;
+      }
+      </style>
 </head>
-<body style="background-color: #E7BEA3;">
+
+<body>
+    <header>
+      <a href="index.html">
+        <img src="./images/logozatim.png" alt="Logo" style="width:42px;height:42px;">
+        <nav>
+            <ul class="nav_links">
+                <li><a href="elements.html">ELEMENTS</a></li>
+                <li><a href="crafty.html"> GALLERY</a></li>
+                <li><a href="crafting.html"> CRAFTING </a></li>
+            </ul>
+        </nav>
+
+    </header>
+
 <p>This website is those of you who are wanting to make their guns <b>prettier</b> or <b>more fun</b> in the new game CS2.</p>
 <h4>There are some question you might ask yourselves before we start:</h4>
 
-<!-- vlajka -->
-<svg width="200" height="100">
-  <rect x="3" y="2" width="200" height="100" stroke="red" stroke-width="4" fill="red" />
-  <rect x="3" y="1" width="200" height="50" stroke="white" stroke-width="4" fill="white" />
-  <polygon points="0 0,100 53,0 100," class="triangle" fill="blue" />
-</svg>
-<!-- vlajka -->
+<button type="button" class="collapsible"><b>What is CS2?</b></button>
+<div class="content">
+  <p>Counter-Strike 2 is a <b>free-to-play tactical first-person shooter game</b> developed and published in 2023 by Valve.
+     It is the fifth entry in the Counter-Strike series, developed as an updated version of the previous entry, 
+     Counter-Strike: Global Offensive (2012).</p>
+</div>
 
-<!-- tabulka -->
+<button type="button" class="collapsible"><b>Is CS2 free to play?</b></button>
+<div class="content">
+  <p> Getting into the exciting world of CS2 is easy and <b>completely free</b>. 
+    You can follow this <a href="https://store.steampowered.com/app/730/CounterStrike_2/">link</a> to download and install the game.</p>
+</div>
 
-<!-- collapsibles -->
-
-    <button type="button" class="collapsible"><b>What is CS2?</b></button>
-    <div class="content">
-      <p>Counter-Strike 2 is a <b>free-to-play tactical first-person shooter game</b> developed and published in 2023 by Valve.
-         It is the fifth entry in the Counter-Strike series, developed as an updated version of the previous entry, 
-         Counter-Strike: Global Offensive (2012).</p>
-    </div>
-
-    <button type="button" class="collapsible"><b>Is CS2 free to play?</b></button>
-    <div class="content">
-      <p> Getting into the exciting world of CS2 is easy and <b>completely free</b>. 
-        You can follow this <a href="https://store.steampowered.com/app/730/CounterStrike_2/">link</a> to download and install the game.</p>
-    </div>
-
-    <script>
-        var coll = document.getElementsByClassName("collapsible");
-        var i;
-        
-        for (i = 0; i < coll.length; i++) {
-          coll[i].addEventListener("click", function() {
-            this.classList.toggle("active");
-            var content = this.nextElementSibling;
-            if (content.style.display === "block") {
-              content.style.display = "none";
-            } else {
-              content.style.display = "block";
-            }
-          });
+<script>
+    var coll = document.getElementsByClassName("collapsible");
+    var i;
+    
+    for (i = 0; i < coll.length; i++) {
+      coll[i].addEventListener("click", function() {
+        this.classList.toggle("active");
+        var content = this.nextElementSibling;
+        if (content.style.display === "block") {
+          content.style.display = "none";
+        } else {
+          content.style.display = "block";
         }
-        </script>
+      });
+    }
+    </script> 
 
-<!-- collapsibles -->
-
-
-<!--  dodelat aby je to hodilo dolu -->
-<h4 style="color: #984042;">What do we use for crafting:</h4>
-<ul>
-    <li>Gun skins</li>
-    <li>Stickers</li>
-    <li>Charms</li>
-</ul>
-<!-- todle by chtelo aby je to hodilo dolu -->
-
-<h2 style="color: #984042;text-align: center;">GUN SKINS</h2>
-<p>Skins, also referred to as finishes, introduced in the Arms Deal update.
-   They are weapons with different textures that can be equipped in-game. 
-   They are entirely cosmetic, holding no gameplay function.</p>
-<p><b>To acquire a skin, one must either:</b></p>
-<ol>
-  <li>Earn them through random drops by playing in online community and official servers.</li>
-  <li>From opening containers, such as weapon cases or souvenir packages.</li>
-  <li>Trade 10 skins of the same rarity for one of a higher rarity with a Trade Up Contract.</li>
-  <li>Buying skins from the <a href="https://steamcommunity.com/market/">Steam Market</a>.</li>
-  <li>Trading with other players.</li>
-</ol>
-
-<img src="./images/skins.png" height="300" alt="STICKERS">
-
-<h2 style="color: #984042; text-align: center;">STICKERS</h2>
-<p><b>Stickers</b> were introduced in Counter-Strike: Global Offensive with the February 5, 
-  2014 update and are purely cosmetic addition to customize a player's weapon.</p>
-<p>A sticker from the player's inventory can be applied only once to any gun or gun skin owned, 
-    after which it will be removed from the player's inventory and only exist on the weapon it was placed onto.
-    Trading the weapon skin will carry the applied stickers with them, though stickers applied to vanilla skins (stock weapon skins) 
-    cannot be traded since vanilla weapon skins cannot be traded.
-    A maximum of 5 stickers can be applied to a weapon.</p>
-<p><b>Stickers can be acquired by:</b></p>
-  <ol>
-    <li>Opening a Sticker Capsule</li>
-    <li>Buying them from the <a href="https://steamcommunity.com/market/">Steam Market</a>.</li>
-    <li>Trading with other players</li>
-    <li>Finding them pre-applied on skins on the Steam Market</li>
-  </ol>
-
-  <img src="./images/stickers.png" height="300" alt="STICKERS">
-
-    <h2 style="color: #984042; text-align: center;">CHARMS</h2>
-<p>On October 2nd, 2024, CS2 introduced a new Armory Update that brought two brand-new charm collections: 
-    the Missing Link Charm Collection and the Small Arms Charm Collection. These charms are an exciting addition to the game, 
-    providing players with stylish, attachable collectibles that can be displayed on their weapons.</p>
-    <p><b>Charms can be acquired by:</b></p>
-  <ol>
-    <li>Buying them from the <a href="https://steamcommunity.com/market/">Steam Market</a>.</li>
-    <li>Trading with other players</li>
-  </ol>
-
-    <img src="./images/Charmss.png" height="300" alt="CHARMS">
-
-
-
-
-<h2><a href="crafty.html">stickers crafts</a></h2>
 </body>
 </html>
