--- a/elements.html
+++ b/elements.html
@@ -6,11 +6,6 @@
     <title> ELEMENTS | CS2 CRAFTS </title>
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <style>
-      body {
-        font-family: 'Pathway Extreme', sans-serif;
-      }
-      </style>
 </head>
 <body>
     <header>
@@ -25,7 +20,7 @@
         </nav>
 
     </header>
-
+<h1>ELEMENTS</h1>
     <h4">What do we use for crafting:</h4>
     <ul>
         <li>Gun skins</li>
