--- a/crafty.html
+++ b/crafty.html
@@ -6,11 +6,6 @@
     <title> GALLERY | CS2 CRAFTS </title>
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <style>
-      body {
-        font-family: 'Pathway Extreme', sans-serif;
-      }
-      </style>
 </head>
 </head>
 <body>
@@ -26,7 +21,7 @@
           </nav>
   
       </header>
-
+<h1>GALLERY</h1>
     <ul>
         <li><b>All</b></li>
         <li><b>Funny crafts</b></li>
