--- a/crafting.html
+++ b/crafting.html
@@ -16,12 +16,12 @@
             <ul class="nav_links">
                 <li><a href="elements.html">ELEMENTS</a></li>
                 <li><a href="crafty.html"> GALLERY</a></li>
-                <li><a href="crafting.html"> CRAFTING </a></li>
+                <li><a href="crafting.html"> DIY </a></li>
             </ul>
         </nav>
 
     </header>
-
+<h1>DIY</h1>
 <p>If our craft ideas are not for you or you wish to create something on your own, we provideded you with sites that will do the job.</p>
 <a href="https://csinspect.com/home">CSINSPECT</a> <br>
 <a href="https://cs2inspects.com/cs">CS2INSPECTS</a>
