--- a/crafty.html
+++ b/crafty.html
@@ -16,7 +16,7 @@
               <ul class="nav_links">
                 <li><a href="elements.html">ELEMENTS</a></li>
                 <li><a href="crafty.html"> GALLERY</a></li>
-                <li><a href="crafting.html"> CRAFTING </a></li>
+                <li><a href="crafting.html"> DIY </a></li>
               </ul>
           </nav>
   
@@ -84,7 +84,7 @@
     <p> Desert Eagle | Conspiracy<br> 
         Sticker | Incineration 5x</p>
 
-    <img src="./crafts/howlg.png" height="300" alt="Fade">
+    <img src="./crafts/howl.png" height="300" alt="Fade">
     <p> M4A4 | Red DDPAT Souvenir <br>
         Sticker | Baby Howl — x5</p>
 
