--- a/elements.html
+++ b/elements.html
@@ -3,21 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title> ELEMENTS | CS2 CRAFTS </title>
+    <title> HOME | CS2 CRAFTS </title>
+    <link rel="icon" href="./images/logozatim.png" type="png">
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/tables.css">
+    <link rel="stylesheet" href="styles/collapsible.css">
+    <link rel="html" href="footer.html">
 </head>
-<body>
 
+<body>
     <header>
       <a href="index.html">
-        <img src="./images/logozatim.png" alt="Logo" style="width:42px;height:42px;">
+        <img src="./images/logozatim.png" alt="Logo" style="width:42px;height:42px;"></a>
         <nav>
             <ul class="nav_links">
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="elements.html">ELEMENTS</a></li>
-                <li><a href="crafty.html"> GALLERY</a></li>
-                <li><a href="crafting.html"> DIY </a></li>
+                <li><a href="gallery.html"> GALLERY</a></li>
+                <li><a href="diy.html"> DIY </a></li>
             </ul>
         </nav>
     </header>
@@ -81,6 +86,7 @@
         <img src="./images/Charmss.png" height="300" alt="CHARMS">
   </section>
 </main>
+<footer>      </footer>
 
 </body>
 </html>
