--- a/index.html
+++ b/index.html
@@ -4,122 +4,168 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title> HOME | CS2 CRAFTS </title>
+    <link rel="icon" href="./images/logozatim.png" type="png">
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/tables.css">
+    <link rel="stylesheet" href="styles/collapsible.css">
+    <link rel="stylesheet" href="styles/footer.css">
 </head>
 
 <body>
     <header>
       <a href="index.html">
-        <img src="./images/logozatim.png" alt="Logo" style="width:42px;height:42px;">
+        <img src="./images/logozatim.png" alt="Logo" style="width:42px;height:42px;"></a>
         <nav>
             <ul class="nav_links">
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="elements.html">ELEMENTS</a></li>
-                <li><a href="crafty.html"> GALLERY</a></li>
-                <li><a href="crafting.html"> DIY </a></li>
+                <li><a href="gallery.html"> GALLERY</a></li>
+                <li><a href="diy.html"> DIY </a></li>
             </ul>
         </nav>
     </header>
 
-<h1>HOME</h1>
+<main>
+  <h1>HOME</h1>
 
-<p>Welcome, travelers! If you're hopelessly googling, trying to end the suffering caused mainly by your own thoughts :</p> <br>
+  <p>
+    Welcome, travelers! If you're hopelessly googling, trying to end the suffering caused mainly by your own thoughts :
+  </p> <br>
 
-<!-- zmenit vzhled toho i-->
-<i>"How can I make my guns even more fun?"</i><br>
-<i>"How can i make my guns prettier?"</i><br>
-<i>"What is there to craft with?"</i><br>
-<i>"What do I need to recreate some fancy skins"</i><br>
-<p>This website is just for you !!</p>
+  <i>
+    "How can I make my guns even more fun?"
+  </i><br>
+  <i>
+    "How can i make my guns prettier?"
+  </i><br>
+  <i>
+    "What is there to craft with?"
+  </i><br>
+  <i>
+    "What do I need to recreate some fancy skins"
+  </i><br>
+  <p>
+    This website is just for you !!
+  </p>
 
-<p>However, if someone has stumbled onto our website and has no idea what we’re talking about, let us explain.</p>
-<p>Counter-Strike 2 (CS2) is a first-person shooter video game developed by Valve Corporation which is a part of the Counter-Strike series. 
-  It was announced to the public on March 22, 2023 with an tentative full release for Summer 2023 and a limited test beginning the same day. 
-  It was officially released on September 27, 2023. This is the first game of the Counter-Strike series which utilizes Valve's
-  Source 2 game engine and features major technological advancements since Global Offensive such as "sub-tick" net-code technology, 
-  new voxel based volumetric smokes, and a new toolset for developing maps.</p>
-<p>The game was generally positively received by critics. Player response to the game was however,
-  mixed, primarily as a result of removed content (e.g. Danger Zone) and features that CS:GO had, CS:GO being delisted on the store,
-  and the game being incompatible with older PCs and macOS, or having performance and other technical issues. 
-  The Metacritic user reviews were later review bombed, alongside with Steam, which caused the recent reviews to briefly drop to "Mixed".</p>
-<h3>New features introduced in Counter-Strike 2 including:</h3>
-  <ul>
-    <li><b>Volumetric smokes</b> - Smokes are now volumetric objects that can be pushed by grenades, 
-      bullets, and more. It also reacts to lighting and the smokes fill the spaces naturally.</li>
-    <li><b>Sub-tick system</b> - Tick rate no longer matters for moving, shooting, or throwing.</li>
-    <li><b>Improved Steam Audio</b> - Sounds have been reworked to better reflect the physical environment, 
-      be more distinct, and express more game state. They have also been rebalanced for a more comfortable listening experience.</li>
-    <li><b>Hardware accelerated ray-tracing for VRAD</b> - VRAD3 now requires graphics card (NVIDIA RTX, AMD RX series) 
-      with ray-tracing support to preview & bake lighting. This will allow VRAD to quickly calculates lighting data. 
-      VRAD3 was also available on older Source 2 games.</li>
-    <li><b>CMAA anti-aliasing</b> - Replacement for FXAA. Another post-processing anti-aliasing method which was sharper than FXAA. 
-      Unlike FXAA, CMAA in Counter-Strike 2 cannot be used alongside MSAA. </li>
-  </ul>
-  <!-- tabulka predelat vzhled podle barev-->
+  <p>
+    However, if someone has stumbled onto our website and has no idea what we’re talking about, let us explain.
+  </p>
+  <p>
+    Counter-Strike 2 (CS2) is a first-person shooter video game developed by Valve Corporation which is a part of the Counter-Strike series. 
+    It was announced to the public on March 22, 2023 with an tentative full release for Summer 2023 and a limited test beginning the same day. 
+    It was officially released on September 27, 2023. This is the first game of the Counter-Strike series which utilizes Valve's
+    Source 2 game engine and features major technological advancements since Global Offensive such as "sub-tick" net-code technology, 
+    new voxel based volumetric smokes, and a new toolset for developing maps.
+  </p>
+  <p>
+    The game was generally positively received by critics. Player response to the game was however,
+    mixed, primarily as a result of removed content (e.g. Danger Zone) and features that CS:GO had, CS:GO being delisted on the store,
+    and the game being incompatible with older PCs and macOS, or having performance and other technical issues. 
+    The Metacritic user reviews were later review bombed, alongside with Steam, which caused the recent reviews to briefly drop to "Mixed".
+  </p>
+  <h3>
+   New features introduced in Counter-Strike 2 including:
+  </h3>
+    <ul>
+      <li>
+       <b>Volumetric smokes</b> - Smokes are now volumetric objects that can be pushed by grenades, 
+        bullets, and more. It also reacts to lighting and the smokes fill the spaces naturally.
+      </li>
+      <li>
+        <b>Sub-tick system</b> - Tick rate no longer matters for moving, shooting, or throwing.
+      </li>
+      <li>
+        <b>Improved Steam Audio</b> - Sounds have been reworked to better reflect the physical environment, 
+        be more distinct, and express more game state. They have also been rebalanced for a more comfortable listening experience.
+      </li>
+      <li>
+        <b>Hardware accelerated ray-tracing for VRAD</b> - VRAD3 now requires graphics card (NVIDIA RTX, AMD RX series) 
+        with ray-tracing support to preview & bake lighting. This will allow VRAD to quickly calculates lighting data. 
+        VRAD3 was also available on older Source 2 games.
+      </li>
+      <li>
+        <b>CMAA anti-aliasing</b> - Replacement for FXAA. Another post-processing anti-aliasing method which was sharper than FXAA. 
+        Unlike FXAA, CMAA in Counter-Strike 2 cannot be used alongside MSAA. 
+      </li>
+    </ul>
 
-<h3>Game modes:</h3>
-  <table>
-    <tr>
-      <th>Official Game Mode</th>
-      <th>Match length</th>
-      <th>Description</th>
-    </tr>
-    <tr>
-      <td>Competitive</td>
-      <td>20-90 minutes</td>
-      <td>The classic game mode: Two teams of 5 players fight in a best of 24 rounds. 
-        In Bomb Defusal scenarios, Terrorists must plant a bomb at a target and defend it until it explodes
-         - Counter-Terrorists must either stop them from planting or defuse the bomb before it detonates. 
-         In Hostage Rescue scenarios, Counter-Terrorists must find and escort a hostage - Terrorists must stop them. 
-         There are skill groups for ranked matchmaking so that ideally players are matched with enemies of a similar skill level. 
-         In unranked matchmaking, these skill groups are also regarded but not adjusted.</td>
-    </tr>
-    <tr>
-      <td>Wingmans</td>
-      <td>10-30 minutes</td>
-      <td>Like Competitive, but adjusted for 2v2 and for a smaller 
+  <h3>Game modes:</h3>
+    <table>
+      <tr>
+        <th>Official Game Mode</th>
+        <th>Match length</th>
+        <th>Description</th>
+      </tr>
+      <tr>
+        <td>Competitive</td>
+        <td>20-90 minutes</td>
+        <td>The classic game mode: Two teams of 5 players fight in a best of 24 rounds. 
+          In Bomb Defusal scenarios, Terrorists must plant a bomb at a target and defend it until it explodes
+          - Counter-Terrorists must either stop them from planting or defuse the bomb before it detonates. 
+          In Hostage Rescue scenarios, Counter-Terrorists must find and escort a hostage - Terrorists must stop them. 
+          There are skill groups for ranked matchmaking so that ideally players are matched with enemies of a similar skill level. 
+          In unranked matchmaking, these skill groups are also regarded but not adjusted.</td>
+      </tr>
+      <tr>
+        <td>Wingmans</td>
+        <td>10-30 minutes</td>
+        <td>Like Competitive, but adjusted for 2v2 and for a smaller 
         map or a map section, best of 16 rounds, rounds are shorter.</td>
-    </tr>
-    <tr>
-      <td>Casual</td>
-      <td>10-20 minutes</td>
-      <td>Like Competitive but not binding ("casual"), with simplified and shortened gameplay: best of 15 rounds, shorter freezetime per round, no friendly fire,
+      </tr>
+      <tr>
+        <td>Casual</td>
+        <td>10-20 minutes</td>
+        <td>Like Competitive but not binding ("casual"), with simplified and shortened gameplay: best of 15 rounds, shorter freezetime per round, no friendly fire,
          no team collision, free armor and free defuse kit/cutters.</td>
-    </tr>    
-    <tr>
-      <td>Deathmatch</td>
-      <td>10 minutes</td>
-      <td>This is a single 10 minute round with instant respawns. The player's goal is to eliminate as many enemies as possible 
+      </tr>    
+      <tr>
+        <td>Deathmatch</td>
+        <td>10 minutes</td>
+        <td>This is a single 10 minute round with instant respawns. The player's goal is to eliminate as many enemies as possible 
         with whatever weapon they wish to use. Weapons are free and only rifles, SMGs, heavy weapons, pistols and the Zeus x27 may be bought. Players have 
         a short invulnerability period to buy weapons before moving.</td>
-    </tr>
-    <tr>
-      <td>Arms Race</td>
-      <td>5-10 minutes</td>
-      <td>This is a single extended round with instant respawn. 
+      </tr>
+      <tr>
+        <td>Arms Race</td>
+        <td>5-10 minutes</td>
+        <td>This is a single extended round with instant respawn. 
         All players start with the same weapon and get a new one each time they kill an enemy. 
         The progression of unlocked weapons ends with the knife. The first player to get two kills with every 
         weapon plus a kill with the golden knife wins the match.</td>
     </tr>
-  </table>
+    </table>
   
 
 
 
-<h3>And still there can be some unanswered questions:</h3>
+  <h3>
+    And still there can be some unanswered questions:
+  </h3>
 
-<button type="button" class="collapsible"><b>What is CS2?</b></button>
+<button type="button" class="collapsible">What is CS2?</button>
 <div class="content">
-  <p>Counter-Strike 2 is a <b>free-to-play tactical first-person shooter game</b> developed and published in 2023 by Valve.
+  <p>
+    Counter-Strike 2 is a <b>free-to-play tactical first-person shooter game</b> developed and published in 2023 by Valve.
      It is the fifth entry in the Counter-Strike series, developed as an updated version of the previous entry, 
-     Counter-Strike: Global Offensive (2012).</p>
+     Counter-Strike: Global Offensive (2012).
+    </p>
 </div>
 
-<button type="button" class="collapsible"><b>Is CS2 free to play?</b></button>
+<button type="button" class="collapsible">Is CS2 free to play?</button>
 <div class="content">
-  <p> Getting into the exciting world of CS2 is easy and <b>completely free</b>. 
-    You can follow this <a href="https://store.steampowered.com/app/730/CounterStrike_2/">link</a> to download and install the game.</p>
+  <p> 
+    Getting into the exciting world of CS2 is easy and <b>completely free</b>. 
+    You can follow this <a href="https://store.steampowered.com/app/730/CounterStrike_2/">link</a> to download and install the game.
+  </p>
 </div>
+</main>
+
+<footer>
+  Michaela Fenclová ©2024
+</footer>
 
 <script>
     var coll = document.getElementsByClassName("collapsible");
@@ -137,6 +183,5 @@
       });
     }
     </script> 
-  <!-- footer dodelat-->
 </body>
 </html>
