--- a/diy.html
+++ b/diy.html
@@ -3,28 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title> CRAFTING | CS2 CRAFTS </title>
+    <title> HOME | CS2 CRAFTS </title>
+    <link rel="icon" href="./images/logozatim.png" type="png">
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/tables.css">
+    <link rel="stylesheet" href="styles/collapsible.css">
 </head>
 
 <body>
     <header>
       <a href="index.html">
-        <img src="./images/logozatim.png" alt="Logo" style="width:42px;height:42px;">
+        <img src="./images/logozatim.png" alt="Logo" style="width:42px;height:42px;"></a>
         <nav>
             <ul class="nav_links">
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="elements.html">ELEMENTS</a></li>
-                <li><a href="crafty.html"> GALLERY</a></li>
-                <li><a href="crafting.html"> DIY </a></li>
+                <li><a href="gallery.html"> GALLERY</a></li>
+                <li><a href="diy.html"> DIY </a></li>
             </ul>
         </nav>
-
     </header>
+
+<main>
 <h1>DIY</h1>
 <p>If our craft ideas are not for you or you wish to create something on your own, we provideded you with sites that will do the job.</p>
 <a href="https://csinspect.com/home">CSINSPECT</a> <br>
 <a href="https://cs2inspects.com/cs">CS2INSPECTS</a>
+</main>
 
 </body>
 </html>
