--- a/diy.html
+++ b/diy.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/tables.css">
     <link rel="stylesheet" href="styles/collapsible.css">
+    <link rel="stylesheet" href="styles/footer.css">
 </head>
 
 <body>
@@ -21,17 +22,66 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="elements.html">ELEMENTS</a></li>
                 <li><a href="gallery.html"> GALLERY</a></li>
-                <li><a href="diy.html"> DIY </a></li>
+                <li><a href="diy.html" class="active"> DIY </a></li>
             </ul>
         </nav>
     </header>
 
 <main>
-<h1>DIY</h1>
-<p>If our craft ideas are not for you or you wish to create something on your own, we provideded you with sites that will do the job.</p>
-<a href="https://csinspect.com/home">CSINSPECT</a> <br>
-<a href="https://cs2inspects.com/cs">CS2INSPECTS</a>
+<h1 class="slide-in-elliptic-left-fwd">
+    DIY
+</h1>
+<h2>
+    Thank You for Visiting!
+</h2>
+<p>
+    Dear Reader,
+    Thank you so much for taking the time to explore my website. I truly appreciate your interest and support. 
+    Whether you're here to learn, explore, or craft, your curiosity means the world to me.</p>
+<p>
+    If you found the crafts I offer didn’t fully meet your expectations, no worries! 
+    Here’s a list of amazing resources where you can dive deeper into crafting your own skins:
+</p>
+<h3>
+    Recommended Skin Crafting Sites
+</h3>
+
+<ul class="odkazy">
+    <li><a href="https://csinspect.com/home">CSINSPECT</a> </li>
+    <li><a href="https://cs2inspects.com/cs">CS2INSPECTS</a> </li>
+</ul>
+
+<p>
+    I hope these resources help spark your creativity and lead you to craft the skins of your dreams.
+    If you have any feedback about this website or ideas you'd like to share, feel free to reach out!
+</p>
+
+<h3>
+    Keep Creating, Keep Crafting
+</h3>
+<p>
+    If you’ve enjoyed your visit, I encourage you to share this site with others who might find it useful or inspiring. 
+    And if there’s anything you’d like to see improved, added, or changed, please don’t hesitate to reach out. 
+    Your voice matters, and I value every suggestion that helps make this space better for everyone.
+</p>
+<p>
+    In closing, remember this: crafting is an expression of who you are. 
+    It’s about exploring your unique ideas and turning them into something awesome. 
+    Whether you’re crafting skins, placing a stickers on your gun, or simply attaching a charm, keep going.
+    The world needs your creativity.
+</p>
+<p>
+    Thank you once again for being here. Wishing you endless inspiration and success in all your creative endeavors!
+</p>
+<p>
+    With heartfelt gratitude,<br>
+    Michala, creator of this site.
+</p>
 </main>
+
+<footer>
+    <p>Michaela Fenclová ©2024</p>
+</footer>
 
 </body>
 </html>
