--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="./images/logozatim.png" alt="Logo" style="width:42px;height:42px;"></a>
         <nav>
             <ul class="nav_links">
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="index.html" class="active">HOME</a></li>
                 <li><a href="elements.html">ELEMENTS</a></li>
                 <li><a href="gallery.html"> GALLERY</a></li>
                 <li><a href="diy.html"> DIY </a></li>
@@ -28,7 +28,7 @@
     </header>
 
 <main>
-  <h1>HOME</h1>
+  <h1 class="slide-in-elliptic-left-fwd">HOME</h1>
 
   <p>
     Welcome, travelers! If you're hopelessly googling, trying to end the suffering caused mainly by your own thoughts :
@@ -151,7 +151,7 @@
     Counter-Strike 2 is a <b>free-to-play tactical first-person shooter game</b> developed and published in 2023 by Valve.
      It is the fifth entry in the Counter-Strike series, developed as an updated version of the previous entry, 
      Counter-Strike: Global Offensive (2012).
-    </p>
+  </p>
 </div>
 
 <button type="button" class="collapsible">Is CS2 free to play?</button>
@@ -164,7 +164,7 @@
 </main>
 
 <footer>
-  Michaela Fenclová ©2024
+  <p>Michaela Fenclová ©2024</p>
 </footer>
 
 <script>
