--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
 
 <div class="container">
 
-    <main class="mainContainer">
+    <div class="mainContainer">
 
         <section class="btns">
             <ul>
@@ -51,7 +51,6 @@
         </section>
 
         <section class="definition">
-            <h2>Definitions</h2>
             <p class="def" data-items="Expensive">
                 The most interesting challenge for custom craft lovers 
                 has become recreating expensive items on a much smaller budget. Especially for you, we have gathered
@@ -65,7 +64,7 @@
                 Šmakuláda is really master of his own crafs and we are proud to share his ideas with you.
             </p>
             <p class="def" data-items="Danka">
-                Last but not least is a very special artist and his crafts can only be describe as the best you'll ever seen. Take a look!
+                Last but not least is a very special artist Dano and his crafts can only be describe as the best you'll ever seen. Take a look!
             </p>
 
         </section>
@@ -79,10 +78,10 @@
                 <div class="imgText">
                     <h2>MP 7 | Whiteout</h2>
                     <p>Sticker | Ence Holo Copenhagen 2024 <br>
-                        Sticker | Lefty (CT) | 100% Scrape <br>
-                        Sticker | Lenticular cheeky eyes | 90% Scrape <br>
-                        Sticker | Paper mouth | 100% Scrape<br>
-                        Sticker | Red Shades (Foil) | 100% Scrape</p>
+                        Sticker | Lefty (CT)  <br>
+                        Sticker | Lenticular cheeky eyes <br>
+                        Sticker | Paper mouth<br>
+                        Sticker | Red Shades (Foil)</p>
                 </div>
             </div>
 
@@ -318,8 +317,15 @@
                         Sticker | Ninjas in Pyjamas (Holo) | Paris 2023</p>
                 </div>
             <script type="text/javascript" src="gallery-script.js"></script>
-        </section>      
-    </main>
-</div>
+        </section>  
+
+    </div><!-- MainContainer -->
+</div><!-- Container -->
+
+</main>
+<footer>
+    <p>Michaela Fenclová ©2024</p>
+</footer>
+
 </body>
 </html>
